tests/baselines/reference/computedPropertyNames50_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(3,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(3,9): error TS2300: Duplicate identifier 'foo'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(8,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(11,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(15,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(18,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(18,9): error TS1118: An object literal cannot have multiple get/set accessors with the same name.
tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts(18,9): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames50_ES5.ts (8 errors) ====
    var x = {
        p1: 10,
        get foo() {
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~~~
!!! error TS2300: Duplicate identifier 'foo'.
            if (1 == 1) {
                return 10;
            }
        },
        get [1 + 1]() {
            ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            throw 10;
        },
        set [1 + 1]() {
            ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            // just throw
            throw 10;
        },
        get [1 + 1]() {
            ~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 10;
        },
        get foo() {
            ~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~~~
!!! error TS1118: An object literal cannot have multiple get/set accessors with the same name.
            ~~~
!!! error TS2300: Duplicate identifier 'foo'.
            if (2 == 2) {
                return 20;
            }
        },
        p2: 20
    }